Correct dark mode glitch on navbar toggle

--- a/app/assets/stylesheets/components/dark_mode.scss
+++ b/app/assets/stylesheets/components/dark_mode.scss
@@ -21,7 +21,7 @@
   }
 
   h2, h3, h4, a, .text-bold, .text-about-bullet,
-  .container-greeing-accent, .custom-button {
+  .container-greeing-accent, .custom-button, .toggle-btn {
     color: $light-blue;
   }
 
